<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp25">

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:background="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2" />


            <EditText
                android:id="@+id/input_nic"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp50"
                android:layout_marginTop="@dimen/dp25"
                android:background="@drawable/border_grey_white"
                android:cursorVisible="true"
                android:hint="@string/login_nickname_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_logo"
                app:layout_constraintVertical_bias="0" />


            <EditText
                android:id="@+id/input_pwd"
                style="@style/signup_input"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/dp25"
                android:background="@drawable/border_grey_white"
                android:cursorVisible="true"
                android:hint="@string/login_pwd_hint"
                android:inputType="numberPassword"
                android:maxLength="4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_nic"
                app:layout_constraintVertical_bias="0" />

            <Button
                android:id="@+id/confirm_btn"
                style="@style/bottom_confirm_btn"
                android:text="@string/confrim_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_pwd"
                app:layout_constraintVertical_bias="1" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>